--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,7 @@ services:
 before_install:
   - docker build -t portfolio-web .
   - docker run -it -p 5000:5000 portfolio-web
-  - docker ps -a 
+  - docker ps -a
 
+script:
+  - pytest
