--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 
 before_install:
   - docker build -t portfolio-web .
-  - docker run -it -p 5000:5000 portfolio-web
+  - docker run -d -p 5000:5000 portfolio-web
   - docker ps -a
 
 script:
